--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Yixuan Liu"
   pronouns         : # example: "she/her"  
-  bio              : "Ph.D. candidate at Shanghai Jiao Tong University"
+  bio              : "Ph.D. candidate, CS, SJTU"
   location         : "Shanghai, China"
   employer         : "Shanghai Jiao Tong University"
   uri              : "https://lyx011027.github.io"
